# gatheredCharts

./: .gitignore  .pre-commit-config.yaml  README.md  installation.md  pyproject.toml  read_ug.py  song_lyrics.txt  transpose.py
examples/: example.py  parse_chord_pro.py  pdf_generation.py
src/gathered_charts/: generate_music.py  transpose.py
